# sims

./: .gitignore
server/: Cargo.toml
server/src/: consts.rs  main.rs
