[package]
name = "sims-server"
version = "0.1.0"
edition = "2021"
license = "GPL-2.0-or-later"
authors = ["Amy Parker <apark0006@student.cerritos.edu>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
